cluster/apps/networking/external-services/home-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app home-assistant
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: "192.168.1.3"
  ports:
    - name: http
      port: &port 8123
      protocol: TCP
      targetPort: *port
